--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -1,38 +1,43 @@
-<div id="sidebar_left">
-  <%= render 'layouts/left_sidebar_modules' %>
-</div>
-<div id="center_col">
-  <div id="ddtabs1" class="basictab">
-    <ul>
-      <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
-    </ul>
-  </div>
-  <div class="tabcontainer">
-    <div id="sc1" class="tabcontent">
-      <%= simple_form_for(@user) do |f| %>
-          <%= f.error_notification %>
-          <%= f.input :username, :label => (t "user.username") %>
-          <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
-          <%= f.input :password, :required => true %>
-          <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
-          <%= f.input :email, :label => (t "global.email") %>
-          <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
-          <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
-          <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
-          <%= f.input :zip, :input_html => {:size => 30}, :label =>(t "global.zip") %>
-          <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
-          <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
-          <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-          <% if current_user == nil %>
-              <%= hidden_field_tag "user[created_by]", "SELF" %>
-          <% else %>
-              <%= hidden_field_tag "user[created_by]", current_user.username %>
-          <% end %>
-          <div class="center">
-            <%= f.submit %>
-          </div>
+<style type="text/css">
+      body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
+    </style>
+<h1 class="offset3"><%= @title %></h1>
+<div class="span10">
+  <%= simple_form_for @user, :html => { :class => "form-horizontal"} do |f| %>
+      <div class="span5 well">
+        <h4 class="offset4"><%= t("global.required") %></h4>
+        <%= f.input :username, :label => (t "user.username") %>
+                  <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
+                  <%= f.input :password, :required => true %>
+                  <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
+                  <%= f.input :email, :label => (t "global.email") %>
+      </div>
+      <div class="span5 well">
+        <h4 class="offset4"><%= t("global.additional") %></h4>
+        <%= f.input :address, :input_html => {:rows => 5}, :label => (t "global.address") %>
+                  <%= f.input :city, :input_html => {:size => 30}, :label => (t "global.city") %>
+                  <%= f.input :state, :input_html => {:size => 30}, :label => (t "global.state") %>
+                  <%= f.input :zip, :input_html => {:size => 30}, :label =>(t "global.zip") %>
+                  <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
+                  <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
+                  <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
+                  <% if current_user == nil %>
+                      <%= hidden_field_tag "user[created_by]", "SELF" %>
+                  <% else %>
+                      <%= hidden_field_tag "user[created_by]", current_user.username %>
+                  <% end %>
+      </div>
+
+      <div class="form-actions span10">
+                     <%= f.submit nil, :class => "btn btn-primary" %>
+                     <%= link_to t("global.cancel"), root_path, :class => "btn" %>
+                   </div>
+
       <% end %>
-    </div>
-  </div>
 </div>
+
 
