--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,13 +1,3 @@
-<%= render 'layouts/left_sidebar_modules' %>
-
-<div id="center_col" class="content">
-  <div id="page_title" class="shadow">
-    <h1>Editing page</h1>
-    </div>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @page %> |
-<%= link_to 'Back', :back %>
-
+<div class="span10">
+    <%= render 'form' %>
 </div>
