--- a/app/views/permissions/edit.html.erb
+++ b/app/views/permissions/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing permission</h1>
+<div class="span10">
+  <%= render 'form' %>
+</div>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @permission %> |
-<%= link_to 'Back', permissions_path %>
