--- a/app/views/permissions/index.html.erb
+++ b/app/views/permissions/index.html.erb
@@ -1,29 +1,25 @@
-<h1>Listing permissions</h1>
+<div class="span10">
+  <table class="table table-striped table-bordered table-condensed">
+    <tr>
+      <th><%= t("permission.module_class") %></th>
+      <th><%= t("global.permission") %></th>
+      <th><%= t("permission.action_type") %></th>
+      <th><%= t("role.action") %></th>
+    </tr>
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Action</th>
-    <th>Subject class</th>
-    <th>Subject</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @permissions.each do |permission| %>
-  <tr>
-    <td><%= permission.name %></td>
-    <td><%= permission.action %></td>
-    <td><%= permission.subject_class %></td>
-    <td><%= permission.subject_id %></td>
-    <td><%= link_to 'Show', permission %></td>
-    <td><%= link_to 'Edit', edit_permission_path(permission) %></td>
-    <td><%= link_to 'Destroy', permission, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Permission', new_permission_path %>
+  <% @permissions.each do |permission| %>
+    <tr>
+      <td><%= permission.subject_class %></td>
+      <td><%= permission.name %></td>
+      <td><%= permission.action %></td>
+      <td>
+        <%= menu_button t("global.view"), permission, "icon-eye-open", 'btn btn-mini btn-info' %>
+        <%= menu_button t("global.edit"), edit_permission_path(permission), "icon-pencil", 'btn btn-mini btn-success' %>
+      </td>
+    </tr>
+  <% end %>
+  </table>
+</div>
+<div class="span2">
+  <%= menu_button t("global.new"), new_permission_path, "icon-plus-sign icon-white"  %>
+</div>
