--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -1,7 +1,7 @@
 <table class="table table-bordered table-hover table table-condensed">
   <thead>
       <tr>
-        <th style="text-align: left!important;"><%= t "workorder.index.t_wo" %></th>
+        <th><%= t "workorder.index.t_wo" %></th>
             <th><%= t "workorder.priority" %></th>
             <th><%= t "global.client" %></th>
             <th><%= t "global.subject" %></th>
@@ -11,15 +11,15 @@
     </thead>
     <tbody>
     <% @assigned_work_orders.each do |assigned_wo| %>
-      <tr class="priority_main_<%= assigned_wo.priority_list.id %>">
+      <tr>
         <td style="text-align: left!important;" ><a href="<%= work_order_path(assigned_wo.id) %>" rel="tooltip" data-placement="right" data-original-title="
                 <%= t "global.created_at" %>:<%= l assigned_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.created_by %>
                 <%= t "global.updated_at" %>:<%= l assigned_wo.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= assigned_wo.edited_by %>"><%= assigned_wo.id %></a></td>
-            <td><%=h assigned_wo.priority_list.name %></td>
+            <td><%= priority_badge assigned_wo.priority_list.id,  assigned_wo.priority_list.name %></td>
             <td><%= link_to(assigned_wo.user.name, user_path(assigned_wo.user_id)) %></td>
             <td><%= truncate(assigned_wo.subject, :length => 100) %></td>
             <td><%= assigned_wo.assigned_to_username %></td>
-            <td align="right">
+            <td>
               <% if can? :manage, WorkOrder %>
               <a class="btn btn-small" href="<%= work_order_url(assigned_wo.id) %>"><i class="icon-search"></i><%= t("global.view") %></a>
               <a class="btn btn-small" href="<%= edit_work_order_url(assigned_wo.id) %>"><i class="icon-pencil"></i><%= t("global.edit") %></a>
