--- a/app/views/work_orders/_closed_wo_tab.html.erb
+++ b/app/views/work_orders/_closed_wo_tab.html.erb
@@ -1,21 +1,26 @@
-<table width="100%" cellspacing="0" >
-  <tr><!--mytodo: add translation-->
-    <th><%= "WO #" %></th>
-    <th><%= "Client" %></th>
-    <th><%= "Subject" %></th>
-    <th><%= "Created" %></th>
-    <th><%= "Closed" %></th>
-  </tr>
-
-
-<% @closed_work_orders.each do |closed_wo| %>
-  <tr class="priority_main_<%= closed_wo.priority_list.id %>">
-    <td align="center"><%= link_to(closed_wo.id, closed_wo) %></td>
-    <td align="center"><%= link_to(closed_wo.user.name, user_path(closed_wo.user_id)) %></td>
-    <td align="left"><%= truncate(closed_wo.subject, :length => 75) %></td>
-    <td align="left"><%= l closed_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= closed_wo.created_by %></td>
-    <td align="left"><%= time_ago_in_words(closed_wo.closed_date) %>&nbsp;<%= t "global.ago" %>&nbsp;<%= t "global.by" %>&nbsp;<%= closed_wo.closed_by %></td>
-
-  </tr>
-<% end %>
+<table class="table table-bordered table-hover table table-condensed">
+  <thead>
+      <tr>
+        <th style="text-align: left!important;"><%= t "workorder.index.t_wo" %></th>
+            <th><%= t "workorder.priority" %></th>
+            <th><%= t "global.client" %></th>
+            <th><%= t "global.subject" %></th>
+            <th><%= t "global.closed" %></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @closed_work_orders.each do |closed_wo| %>
+      <tr>
+        <td><a href="<%= work_order_path(closed_wo.id) %>" rel="tooltip" data-placement="right" data-original-title="
+                [<%= t "global.created_at" %>:<%= l closed_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= closed_wo.created_by %>]&nbsp;&nbsp;&nbsp;
+                [<%= t "global.updated_at" %>:<%= l closed_wo.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= closed_wo.edited_by %>]"><%= closed_wo.id %></a></td>
+            <td><%= priority_badge closed_wo.priority_list.id,  closed_wo.priority_list.name %></td>
+            <td><%= link_to(closed_wo.user.name, user_path(closed_wo.user.id) )%></td>
+            <td><%= truncate(closed_wo.subject, :length => 100 ) %></td>
+            <td>
+              <%= l closed_wo.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= closed_wo.created_by %>
+            </td>
+      </tr>
+    <% end %>
+    </tbody>
 </table>
