--- a/app/views/work_orders/_pending_wo_tab.html.erb
+++ b/app/views/work_orders/_pending_wo_tab.html.erb
@@ -1,29 +1,32 @@
-<table width="100%" cellspacing="0">
-  <tr><!--myTODO: Translation -->
-    <th><%= t "workorder.index.t_wo" %></th>
-    <th><%= t "workorder.priority" %></th>
-    <th><%= t "global.client" %></th>
-    <th><%= t "global.subject" %></th>
-    <th><%= t "global.created_at" %></th>
-    <th><%= t "global.updated_at" %></th>
-    <th><%= t "workorder.assigned_to" %></th>
-    <th><%= t "global.actions" %></th>
-  </tr>
-
-
-<% @pending_work_orders.each do |pending| %>
-  <tr class="priority_main_<%= pending.priority_list.id %>">
-    <td align="center"><%= link_to(pending.id, pending) %></td>
-    <td align="center"><%= pending.priority_list.name %></td>
-    <td align="center"><%= link_to(pending.user.name, user_path(pending.user_id)) %></td>
-    <td><%= truncate(pending.subject , :length => 75) %></td>
-    <td><%= l pending.created_at, :format => :medium %> <%= t "global.by" %> <%= pending.created_by %></td>
-    <td><%= l pending.updated_at, :format => :medium %> <%= t "global.by" %> <%= pending.edited_by %></td>
-    <td><%= pending.assigned_to_username %></td>
-    <td width="w140" align="center"><%= link_to(image_tag('view.png', :title => (t "global.view")), work_order_path(pending.id) )%>&nbsp;
-        <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_url(pending.id)) %>&nbsp;
-        <%= link_to(image_tag('delete.png', :title => (t "global.delete")), work_order_path(pending.id), :confirm => (t 'alert.destroy'), :method => :delete ) %>
-    </td>
-  </tr>
-<% end %>
+<table class="table table-bordered table-hover table table-condensed">
+  <thead>
+      <tr>
+        <th><%= t "workorder.index.t_wo" %></th>
+            <th><%= t "workorder.priority" %></th>
+            <th><%= t "global.client" %></th>
+            <th><%= t "global.subject" %></th>
+            <th><%= t "workorder.assigned_to" %></th>
+            <th><%= t "global.actions" %></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @pending_work_orders.each do |pending| %>
+      <tr>
+        <td><a href="<%= work_order_path(pending.id) %>" rel="tooltip" data-placement="right" data-original-title="
+                <%= t "global.created_at" %>:<%= l pending.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= pending.created_by %>
+                <%= t "global.updated_at" %>:<%= l pending.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= pending.edited_by %>"><%= pending.id %></a></td>
+            <td><%= priority_badge pending.priority_list.id,  pending.priority_list.name %></td>
+            <td><%= link_to(pending.user.name, user_path(pending.user_id)) %></td>
+            <td><%= truncate(pending.subject, :length => 100) %></td>
+            <td><%= pending.assigned_to_username %></td>
+            <td>
+              <% if can? :manage, WorkOrder %>
+              <a class="btn btn-small" href="<%= work_order_url(pending.id) %>"><i class="icon-search"></i><%= t("global.view") %></a>
+              <a class="btn btn-small" href="<%= edit_work_order_url(pending.id) %>"><i class="icon-pencil"></i><%= t("global.edit") %></a>
+              <a class="btn btn-small" href="<%= work_order_path(pending.id,:format => 'pdf') %>"><i class="icon-print"></i><%= t("global.print") %></a>
+              <% end %>
+            </td>
+      </tr>
+    <% end %>
+    </tbody>
 </table>
