--- a/app/views/work_orders/_re_opened_wo_tab.html.erb
+++ b/app/views/work_orders/_re_opened_wo_tab.html.erb
@@ -1,30 +1,30 @@
-<table width="100%" cellspacing="0">
-  <tr><!--myTODO: Translation -->
-    <th><%= t "workorder.index.t_wo" %></th>
-    <th><%= t "workorder.priority" %></th>
-    <th><%= t "global.client" %></th>
-    <th><%= t "global.subject" %></th>
-    <th><%= t "global.created_at" %></th>
-    <th><%= t "global.updated_at" %></th>
-    <th><%= t "workorder.assigned_to" %></th>
-    <th><%= t "global.actions" %></th>
-  </tr>
-
-
-<% @re_opened_work_orders.each do |re_opened| %>
-  <tr class="priority_main_<%= re_opened.priority_list.id %>">
-    <td align="center"><%= link_to(re_opened.id, re_opened) %></td>
-    <td align="center"><%= re_opened.priority_list.name %></td>
-    <td align="center"><%= link_to(re_opened.user.name, user_path(re_opened.user_id)) %></td>
-    <td><%= truncate(re_opened.subject , :length => 75) %></td>
-    <td><%= l re_opened.created_at, :format => :medium %> <%= t "global.by" %> <%= re_opened.created_by %></td>
-    <td><%= l re_opened.updated_at, :format => :medium %> <%= t "global.by" %> <%= re_opened.edited_by %></td>
-    <td><%= re_opened.assigned_to_username %></td>
-    <td width="w140" align="center"><%= link_to(image_tag('view.png', :title => (t "global.view")), work_order_path(re_opened.id) )%>&nbsp;
-        <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_url(re_opened.id)) %>&nbsp;
-        <%= link_to(image_tag('edit.png', :title => (t "global.edit")), close_path(re_opened.id)) %>&nbsp;
-        <%= link_to(image_tag('delete.png', :title => (t "global.delete")), work_order_path(re_opened.id), :confirm => (t 'alert.destroy'), :method => :delete ) %>
-    </td>
-  </tr>
-<% end %>
+<table class="table table-bordered table-hover table table-condensed">
+  <thead>
+      <tr>
+        <th style="text-align: left!important;"><%= t "workorder.index.t_wo" %></th>
+            <th><%= t "workorder.priority" %></th>
+            <th><%= t "global.client" %></th>
+            <th><%= t "global.subject" %></th>
+            <th><%= t "global.actions" %></th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @re_opened_work_orders.each do |re_opened| %>
+      <tr>
+        <td><a href="<%= work_order_path(re_opened.id) %>" rel="tooltip" data-placement="right" data-original-title="
+                [<%= t "global.created_at" %>:<%= l re_opened.created_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= re_opened.created_by %>]&nbsp;&nbsp;&nbsp;
+                [<%= t "global.updated_at" %>:<%= l re_opened.updated_at, :format => :medium %>&nbsp;<%= t "global.by" %>&nbsp;<%= re_opened.edited_by %>]"><%= re_opened.id %></a></td>
+            <td><%= priority_badge re_opened.priority_list.id,  re_opened.priority_list.name %></td>
+            <td><%= link_to(re_opened.user.name, user_path(re_opened.user.id) )%></td>
+            <td><%= truncate(re_opened.subject, :length => 100 ) %></td>
+            <td>
+              <% if can? :manage, WorkOrder %>
+              <a class="btn btn-small" href="<%= work_order_url(re_opened.id) %>"><i class="icon-search"></i><%= t("global.view") %></a>
+              <a class="btn btn-small" href="<%= edit_work_order_url(re_opened.id) %>"><i class="icon-pencil"></i><%= t("global.edit") %></a>
+              <a class="btn btn-small" href="<%= work_order_path(re_opened.id,:format => 'pdf') %>"><i class="icon-print"></i><%= t("global.print") %></a>
+              <% end %>
+            </td>
+      </tr>
+    <% end %>
+    </tbody>
 </table>
